// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ComputedNutrients /> should render 1`] = `
<div
  className="computed-nutrients"
>
  <span
    className="values-label"
  />
  <div
    className="nutrient-values"
  >
    <TrackedNutrients />
  </div>
</div>
`;

exports[`<ComputedNutrients /> should use contain the passed label 1`] = `
<div
  className="computed-nutrients"
>
  <span
    className="values-label"
  >
    testLabel
  </span>
  <div
    className="nutrient-values"
  >
    <TrackedNutrients />
  </div>
</div>
`;
